--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "^18.11.17",
     "antd": "^5.1.0",
+    "axios": "^1.2.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "react": "^18.2.0",
