--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "^18.11.17",
+    "@types/qs": "^6.9.7",
     "antd": "^5.1.0",
     "axios": "^1.2.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
